Fix spacing and add border

--- a/style.css
+++ b/style.css
@@ -369,9 +369,13 @@ p {
 }
 
 .detailswed img {
-  border: none;
   width: 94%;
   height: 94%;
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
+  border-radius: 12px;
+  border: 3px solid #f8e1e7;
 }
 
 .words {
